[package]
name = "rust-game-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
# NOTE: Remember to revert this before releasing your game! Otherwise you will
# need to include libbevy_dylib alongside your game if you want it to run. If 
# you remove the "dynamic" feature, your game executable can run standalone.
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_rapier2d = "0.19.0"
leafwing-input-manager = "0.7.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
